2016-10-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dpxfile.c: Sync with MikTeX.

2016-06-25  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	Modify to make PDF/A generation a bit easier.
	* pdfobj.c: Do not compress XMP Metadata.
	* cidtype2.c, type1.c, type1c.c: Always write CIDSet for CIDType2 and
	CharSet for Type1 font. Check consistency of glyph width.

2016-06-19  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* dvipdfmx.c: Disable overriding "D" option setting from
	dvipdfmx:config special.
	* configure.ac: Change version from 20160307 to 20160619 in order to
	distinguish the new one from that in TeX Live 2016.

2016-05-20  Karl Berry  <karl@tug.org>

	* Version 20160307 for TeX Live 2016.

2016-05-10  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* cidtype2.c: Fix bugs in horizontal-vertical mixed scripts by
	TrueType fonts.

2016-05-08  Masamichi HOSODA  <trueroad@trueroad.jp>

	* dvi.c, dvipdfmx.c, dvipdfmx.h, special.c: Add new specials to handle
	command line options.
	* spc_dvipdfmx.c, spc_dvipdfmx.h: Add for the new specials.
	* Makefile.am, Makefile.in: Change for the added spc_dvipdfmx.c,
	and spc_dvipdfmx.h.

2016-05-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdffont.c: Avoid to crash for too large a value of SOURCE_DATE_EPOCH.
	(w32 only).

2016-05-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfdoc.c, pdfencrypt.c, pdffont.c, pdfobj.h, xbb.c: Improve the
	support of SOURCE_DATE_EPOCH.

2016-05-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfdoc.c, xbb.c: Apply the patch by Alexis,
	http://tug.org/pipermail/tex-live/2016-May/038339.html
	for the support of SOURCE_DATE_EPOCH.
	* pdfencrypt.c: Use gmtime instead of localtime if SOURCE_DATE_EPOCH
	is given, to be consistent with the patch by Alexis.

2016-03-07  Karl Berry  <karl@tug.org>

	* man/dvipdfmx.1: .B not .b.
	Report on tex-k from esr, 29 Feb 2016 12:30:31.

2016-03-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
