@@ -1,3 +1,7 @@
+2016-10-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* dpxfile.c: Use PATH_MAX instead of _MAX_PATH.
+
 2016-10-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
 	* dpxfile.c: Sync with MikTeX.
